# linear_regression

./: .gitignore  .gitmodules  LinearRegression.h  MatrixInverse.h  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
test/: test.cpp
tests/: CMakeLists.txt  main.cpp  test_linear_regression.cpp  test_linear_regression_extended.cpp
